--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "multer": "^1.3.0",
+    "marked": "^0.3.6",
     "connect-mongo": "^2.0.0",
     "config-lite": "^2.0.0",
     "cookie-parser": "~1.4.3",
